--- a/resources/style.css
+++ b/resources/style.css
@@ -5,13 +5,28 @@ body{
 
 }
 
+/* HEADINGS */
+
 .header--main{
     font-weight: normal;
     font-size: 50px;
     color: #ffffff;
 }
 
-.link--main{
+.header--secondary{
+    color: #ffffff;
+    font-size: 42px;
+    font-weight: 300;
+}
+
+.header--subheader{
+    font-size: 21px;
+    color: gray;
+}
+
+/* LINKS */
+
+.link--cta{
     font-size: 16px;
     color: aquamarine;
 }
